<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    android:background="@drawable/map">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="General Rules of the Game"
        android:id="@+id/heading"
        android:textStyle="bold"
        android:textColor="#7a5203"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/rule1"
            android:text="@string/rule1"
            android:textStyle="bold"
            android:layout_below="@+id/heading"
            android:layout_alignLeft="@+id/heading"
            android:layout_alignStart="@+id/heading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rule2"
            android:id="@+id/rule2"
            android:layout_below="@+id/rule1"
            android:layout_alignLeft="@+id/rule1"
            android:layout_alignStart="@+id/rule1"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rul3"
            android:id="@+id/rule3"
            android:layout_below="@+id/rule2"
            android:layout_alignLeft="@+id/rule2"
            android:layout_alignStart="@+id/rule2"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rule4"
            android:id="@+id/rule4"
            android:layout_below="@+id/rule3"
            android:layout_alignLeft="@+id/rule3"
            android:layout_alignStart="@+id/rule3"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rule5"
            android:id="@+id/rule5"
            android:layout_below="@+id/rule4"
            android:layout_alignLeft="@+id/rule4"
            android:layout_alignStart="@+id/rule4"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rule6"
            android:id="@+id/rule6"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>
